# firs

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.cfg
firs/: __init__.py  configuration.py
firs/firs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
firs/replicator/Shuttering/: _random_sharding.py  evaluate.py  get_replicates.py
firs/retrieval/: indexing.py  pipeline_factory.py  retrieving.py
src/firs/: __init__.py  simple_test.py
src/firs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/firs/firs.egg-info/: PKG-INFO  SOURCES.txt
src/firs/replicator/: AbstractReplicator.py  Reformulations.py  __init__.py
src/firs/replicator/Shuttering/: Shuttering.py  __init__.py  _check_inputs.py  _even_sharding.py  build_shards.py  evaluate.py  get_replicates.py  shuttering_utils.py
src/firs/retrieval/: __init__.py  indexing.py  pipeline_factory.py  retrieving.py
src/firs/trecdata/: TrecCollection.py  __init__.py
src/firs/trecdata/TrecCollection/: TrecCollection.py  evaluate.py  get_topics.py  import_collection.py  misc.py  parallel_evaluate.py
src/firs/trecdata/measures/: __init__.py  abstractMeasure.py  ap.py  ndcg.py  precision.py
src/firs/utils/: __init__.py  utils.py
src/pyRe/: __init__.py  configuration.py
src/pyRe/configs/: default_config.ini
src/pyRe/replicator/: Reformulations.py
src/pyRe/replicator/Shuttering/: _get_shuttering_id.py  _import_precomputed_shards.py
src/pyRe/retrieval/: __init__.py  indexing.py  pyterrier2trec.py  retrieving.py
src/pyRe/trecdata/: TrecCollection.py
src/pyRe/utils/: Logger.py
(+2 files in other folders)
