[metadata]
name = firs
version = 0.0.7
author = Guglielmo Faggioli
author_email = guglielmo.faggioli@phd.unipd.it
description = firs: a Framework for Information Retrieval Systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guglielmof/firs
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src